Fix text position and overflow problem

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,11 +1,12 @@
 .about-container {
-  align-self: flex-end;
+  align-self: center;
   display: flex;
+  flex: 1;
   flex-direction: column;
   color: white;
-  width: 50%;
-  height: 90%;
+  width: 80%;
   justify-content: center;
+  padding: var(--container-padding);
 }
 
 .about-title,
@@ -27,5 +28,5 @@
   line-height: 1.6;
   font-size: 1.5em;
   box-shadow: 2px 2px 10px black;
-  overflow: auto;
+  overflow-y: auto;
 }
